FlexBison/parser.output
Terminals unused in grammar

    STRING
    MISTURAR_POR
    IDENTATION


Grammar

    0 $accept: recipe $end

    1 recipe: header BREAKLINE ingredient_list BREAKLINE step_list

    2 header: COMENTARIO SPACE title_line

    3 title_line: title
    4           | title_line SPACE title

    5 title: WORD

    6 ingredient_list: ingredient
    7                | ingredient_list BREAKLINE ingredient

    8 ingredient: INGREDIENTE SPACE WORD SPACE NUMBER SPACE UNIDADE

    9 step_list: ε
   10          | step_list BREAKLINE step

   11 step: PASSO SPACE action

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS
   13       | MISTURAR LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS
   14       | ADICIONAR LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS
   15       | ASSAR LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS

   16 ingredients: WORD
   17            | ingredients COMMA WORD
   18            | ingredients COMMA SPACE WORD


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER (258) 8 12 15
    STRING (259)
    WORD (260) 5 8 16 17 18
    COMENTARIO (261) 2
    INGREDIENTE (262) 8
    PASSO (263) 11
    LEFT_PARENTHESIS (264) 12 13 14 15
    RIGHT_PARENTHESIS (265) 12 13 14 15
    PRE_AQUECER_FORNO (266) 12
    MISTURAR (267) 13
    ADICIONAR (268) 14
    MISTURAR_POR (269)
    ASSAR (270) 15
    UNIDADE (271) 8
    IDENTATION (272)
    BREAKLINE (273) 1 7 10
    SPACE (274) 2 4 8 11 18
    COMMA (275) 12 15 17 18


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    recipe (22)
        on left: 1
        on right: 0
    header (23)
        on left: 2
        on right: 1
    title_line (24)
        on left: 3 4
        on right: 2 4
    title (25)
        on left: 5
        on right: 3 4
    ingredient_list (26)
        on left: 6 7
        on right: 1 7
    ingredient (27)
        on left: 8
        on right: 6 7
    step_list (28)
        on left: 9 10
        on right: 1 10
    step (29)
        on left: 11
        on right: 10
    action (30)
        on left: 12 13 14 15
        on right: 11
    ingredients (31)
        on left: 16 17 18
        on right: 13 14 17 18


State 0

    0 $accept: • recipe $end

    COMENTARIO  shift, and go to state 1

    recipe  go to state 2
    header  go to state 3


State 1

    2 header: COMENTARIO • SPACE title_line

    SPACE  shift, and go to state 4


State 2

    0 $accept: recipe • $end

    $end  shift, and go to state 5


State 3

    1 recipe: header • BREAKLINE ingredient_list BREAKLINE step_list

    BREAKLINE  shift, and go to state 6


State 4

    2 header: COMENTARIO SPACE • title_line

    WORD  shift, and go to state 7

    title_line  go to state 8
    title       go to state 9


State 5

    0 $accept: recipe $end •

    $default  accept


State 6

    1 recipe: header BREAKLINE • ingredient_list BREAKLINE step_list

    INGREDIENTE  shift, and go to state 10

    ingredient_list  go to state 11
    ingredient       go to state 12


State 7

    5 title: WORD •

    $default  reduce using rule 5 (title)


State 8

    2 header: COMENTARIO SPACE title_line •
    4 title_line: title_line • SPACE title

    SPACE  shift, and go to state 13

    $default  reduce using rule 2 (header)


State 9

    3 title_line: title •

    $default  reduce using rule 3 (title_line)


State 10

    8 ingredient: INGREDIENTE • SPACE WORD SPACE NUMBER SPACE UNIDADE

    SPACE  shift, and go to state 14


State 11

    1 recipe: header BREAKLINE ingredient_list • BREAKLINE step_list
    7 ingredient_list: ingredient_list • BREAKLINE ingredient

    BREAKLINE  shift, and go to state 15


State 12

    6 ingredient_list: ingredient •

    $default  reduce using rule 6 (ingredient_list)


State 13

    4 title_line: title_line SPACE • title

    WORD  shift, and go to state 7

    title  go to state 16


State 14

    8 ingredient: INGREDIENTE SPACE • WORD SPACE NUMBER SPACE UNIDADE

    WORD  shift, and go to state 17


State 15

    1 recipe: header BREAKLINE ingredient_list BREAKLINE • step_list
    7 ingredient_list: ingredient_list BREAKLINE • ingredient

    INGREDIENTE  shift, and go to state 10

    $default  reduce using rule 9 (step_list)

    ingredient  go to state 18
    step_list   go to state 19


State 16

    4 title_line: title_line SPACE title •

    $default  reduce using rule 4 (title_line)


State 17

    8 ingredient: INGREDIENTE SPACE WORD • SPACE NUMBER SPACE UNIDADE

    SPACE  shift, and go to state 20


State 18

    7 ingredient_list: ingredient_list BREAKLINE ingredient •

    $default  reduce using rule 7 (ingredient_list)


State 19

    1 recipe: header BREAKLINE ingredient_list BREAKLINE step_list •
   10 step_list: step_list • BREAKLINE step

    BREAKLINE  shift, and go to state 21

    $default  reduce using rule 1 (recipe)


State 20

    8 ingredient: INGREDIENTE SPACE WORD SPACE • NUMBER SPACE UNIDADE

    NUMBER  shift, and go to state 22


State 21

   10 step_list: step_list BREAKLINE • step

    PASSO  shift, and go to state 23

    step  go to state 24


State 22

    8 ingredient: INGREDIENTE SPACE WORD SPACE NUMBER • SPACE UNIDADE

    SPACE  shift, and go to state 25


State 23

   11 step: PASSO • SPACE action

    SPACE  shift, and go to state 26


State 24

   10 step_list: step_list BREAKLINE step •

    $default  reduce using rule 10 (step_list)


State 25

    8 ingredient: INGREDIENTE SPACE WORD SPACE NUMBER SPACE • UNIDADE

    UNIDADE  shift, and go to state 27


State 26

   11 step: PASSO SPACE • action

    PRE_AQUECER_FORNO  shift, and go to state 28
    MISTURAR           shift, and go to state 29
    ADICIONAR          shift, and go to state 30
    ASSAR              shift, and go to state 31

    action  go to state 32


State 27

    8 ingredient: INGREDIENTE SPACE WORD SPACE NUMBER SPACE UNIDADE •

    $default  reduce using rule 8 (ingredient)


State 28

   12 action: PRE_AQUECER_FORNO • LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 33


State 29

   13 action: MISTURAR • LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 34


State 30

   14 action: ADICIONAR • LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 35


State 31

   15 action: ASSAR • LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 36


State 32

   11 step: PASSO SPACE action •

    $default  reduce using rule 11 (step)


State 33

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS • NUMBER COMMA NUMBER RIGHT_PARENTHESIS

    NUMBER  shift, and go to state 37


State 34

   13 action: MISTURAR LEFT_PARENTHESIS • ingredients RIGHT_PARENTHESIS

    WORD  shift, and go to state 38

    ingredients  go to state 39


State 35

   14 action: ADICIONAR LEFT_PARENTHESIS • ingredients RIGHT_PARENTHESIS

    WORD  shift, and go to state 38

    ingredients  go to state 40


State 36

   15 action: ASSAR LEFT_PARENTHESIS • NUMBER COMMA NUMBER RIGHT_PARENTHESIS

    NUMBER  shift, and go to state 41


State 37

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS NUMBER • COMMA NUMBER RIGHT_PARENTHESIS

    COMMA  shift, and go to state 42


State 38

   16 ingredients: WORD •

    $default  reduce using rule 16 (ingredients)


State 39

   13 action: MISTURAR LEFT_PARENTHESIS ingredients • RIGHT_PARENTHESIS
   17 ingredients: ingredients • COMMA WORD
   18            | ingredients • COMMA SPACE WORD

    RIGHT_PARENTHESIS  shift, and go to state 43
    COMMA              shift, and go to state 44


State 40

   14 action: ADICIONAR LEFT_PARENTHESIS ingredients • RIGHT_PARENTHESIS
   17 ingredients: ingredients • COMMA WORD
   18            | ingredients • COMMA SPACE WORD

    RIGHT_PARENTHESIS  shift, and go to state 45
    COMMA              shift, and go to state 44


State 41

   15 action: ASSAR LEFT_PARENTHESIS NUMBER • COMMA NUMBER RIGHT_PARENTHESIS

    COMMA  shift, and go to state 46


State 42

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS NUMBER COMMA • NUMBER RIGHT_PARENTHESIS

    NUMBER  shift, and go to state 47


State 43

   13 action: MISTURAR LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS •

    $default  reduce using rule 13 (action)


State 44

   17 ingredients: ingredients COMMA • WORD
   18            | ingredients COMMA • SPACE WORD

    WORD   shift, and go to state 48
    SPACE  shift, and go to state 49


State 45

   14 action: ADICIONAR LEFT_PARENTHESIS ingredients RIGHT_PARENTHESIS •

    $default  reduce using rule 14 (action)


State 46

   15 action: ASSAR LEFT_PARENTHESIS NUMBER COMMA • NUMBER RIGHT_PARENTHESIS

    NUMBER  shift, and go to state 50


State 47

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS NUMBER COMMA NUMBER • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 51


State 48

   17 ingredients: ingredients COMMA WORD •

    $default  reduce using rule 17 (ingredients)


State 49

   18 ingredients: ingredients COMMA SPACE • WORD

    WORD  shift, and go to state 52


State 50

   15 action: ASSAR LEFT_PARENTHESIS NUMBER COMMA NUMBER • RIGHT_PARENTHESIS

    RIGHT_PARENTHESIS  shift, and go to state 53


State 51

   12 action: PRE_AQUECER_FORNO LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS •

    $default  reduce using rule 12 (action)


State 52

   18 ingredients: ingredients COMMA SPACE WORD •

    $default  reduce using rule 18 (ingredients)


State 53

   15 action: ASSAR LEFT_PARENTHESIS NUMBER COMMA NUMBER RIGHT_PARENTHESIS •

    $default  reduce using rule 15 (action)
